# Cherry

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: cherry.cpp  compiler.cpp  compiler.h  data.cpp  data.h  executor.cpp  executor.h  expression.cpp  expression.h  expressions.cpp  expressions.h  flags.cpp  flags.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  macros.h  method.cpp  method.h  parser.cpp  parser.h  scope.cpp  scope.h  statement.cpp  statement.h  type.cpp  type.h
src/statements/: FunctionCall.h  GeneralStatement.cpp  GeneralStatement.h  GlobalBlock.cpp  GlobalBlock.h  IfStatement.h  Return.h  VariableAffectation.h  VariableDefinition.h
src/statements/definition/: VariableDefinition.cpp  VariableDefinition.h
src/statements/expression/: Expression.cpp  Expression.h
src/statements/variable/: VariableAffectation.cpp  VariableAffectation.h  VariableDefinition.cpp  VariableDefinition.h
src/types/: classtype.h  type.cpp  type.h  types.cpp
test/: miaw.json  test.cherry  test.mtc
